# Python-Checkers-AI

./: README.md  benchmark.py  main.py  optimal_parameters.py  pyproject.toml
Rapport/: conclusion.tex  demarche_benchmark.tex  nb_turns_time.tex  preambule.tex  rapport.aux  rapport.fdb_latexmk  rapport.fls  rapport.out  rapport.tex  rapport.toc  results_conclusion.tex  time_turn.tex
SQLite/: GLOBAL.db  GLOBAL_backup.db  Games.db  Games_0_25.db  Games_0_50.db  Games_0_75.db  Games_1.db  Games_1_50.db  Games_2.db  Games_v2.db  Games_v3.db  Games_v4.db  Games_v5.db  Games_v6.db  box_plot.py  box_plot_param.py  data_analysis.py  dbmanagement.py  dbtest.py  global_benchmark.py
checkers/: board.py  game.py  move.py  piece.py
heuristic_stats/: results_analysis.py  strategy.md
heuristic_stats/NoHeuristic/: m100_h0_1651786476.1179326_HEURISTICS.csv  m100_h0_1651786797.3131018_NOHEURISTICS.csv  m100_h0_1651789681.1355836_NOHEURISTICS.csv  m100_h1_1651789977.9215906_NOHEURISTICS.csv  m110_h1_1651790053.230599_NOHEURISTICS.csv  m120_h1_1651790168.7779212_NOHEURISTICS.csv  m130_h1_1651790278.8872778_NOHEURISTICS.csv  m140_h1_1651790609.634683_NOHEURISTICS.csv  m150_h0_1651788958.7052047_NOHEURISTICS.csv  m150_h0_1651789305.2348046_NOHEURISTICS.csv  m150_h0_1651789847.2658389_NOHEURISTICS.csv  m150_h1_1651790819.63069_NOHEURISTICS.csv  m200_h0_1651787061.2675483_NOHEURISTICS.csv
heuristic_stats/NoHeuristicsAcc/: m100_h1_1651791167.8882332_NOHEURISTICS.csv  m100_h1_1651791206.2805622_NOHEURISTICS.csv  (+10 more)
minimax/: algorithm.py
montecarlo/: algorithm.py  tree.p
