[tool.poetry]
name = "python-checkers-ai"
version = "0.1.0"
description = ""
authors = ["Sami <samiabdulsater@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"
pandas = "^1.4.2"
sqlite3-api = "^2.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
